--- a/functionFundamentals.html
+++ b/functionFundamentals.html
@@ -111,11 +111,11 @@
         }
 
         function parentFunction(parameter, callback){
-            fruitCollection.push(parameter); //  <<  Push fruit on to array
+            fruitCollection.push(parameter);        //  <<  Push fruit on to array
             callback(parameter);
         }
 
-        parentFunction("Noodle", printData);
+        parentFunction("Noodle", printData);        //  Invoke parentFunction and pass arguments
 
 
 
