--- a/AjaxJson.html
+++ b/AjaxJson.html
@@ -63,16 +63,16 @@
         document.getElementById("id02").innerHTML = (text + "<br>");
     }
 
-
-//  AJAX JSON OBJECT from TREEHOUSE.COM:
+    //  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    //  AJAX JSON OBJECT from TREEHOUSE.COM:     AJAX TREEHOUSE    AJAX TREEHOUSE    AJAX TREEHOUSE
 
 function getUser(username){
 
         //  AJAX  AJAX  AJAX  AJAX  AJAX  AJAX  AJAX
-        var xmlhttp = new XMLHttpRequest();           //  AJAX CALL to TREEHOUSE.com
+        var xmlhttp = new XMLHttpRequest();                               //  Create:  XMLHttpRequest OBJECT
         var url = "https://teamtreehouse.com/" + username + ".json";      //  <<  GET COLLECTION with AJAX!!
 
-        xmlhttp.onreadystatechange = function() {
+        xmlhttp.onreadystatechange = function() {               //  EVENT:  onreadystatechange
         if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
         var myObject = JSON.parse(xmlhttp.responseText);       //  JSON.parse(1)  1.  xmlhttp.responseText
         displayArray(myObject);                                //  <<  Invoke the Display Function, PASS ARRAY
@@ -81,7 +81,20 @@ function getUser(username){
 
         xmlhttp.open("GET", url, true);
         xmlhttp.send();                             //  AJAX part COMPLETE
+
+        //  readyState    Holds the status of the XMLHttpRequest. Changes from 0 to 4:
+        //  0: request not initialized
+        //  1: server connection established
+        //  2: request received
+        //  3: processing request
+        //  4: request finished and response is ready
+
+        //  status
+        //  200:  "OK"
+        //  404:  "Page not found"
+
         //  AJAX  AJAX  AJAX  AJAX  AJAX  AJAX  AJAX  - END
+
 
         //  Display Results  <<  ARRAY (from AJAX) PASSED TO THIS FUNCTION
         function displayArray(myObject) {
