--- a/Objects.html
+++ b/Objects.html
@@ -12,6 +12,7 @@
 <p id="demo3"></p>
 <p id="demo4"></p>
 <p id="demo5"></p>
+<p id="demo6"></p>
 
 
 <script>
@@ -24,11 +25,11 @@
     };
     document.getElementById("demo").innerHTML = person.fullName();      // {person} OBJECT is invoking fullName()
 
-    //  Add Property:
+    //  ADD Property:
     person.nationality = "English";
     document.getElementById("demo2").innerHTML = person.fullName() + " " + person.nationality;
 
-    //  Delete Property:    delete Keyword
+    //  DELETE Property:    delete Keyword
     delete person.nationality;
     document.getElementById("demo3").innerHTML = person.fullName() + " (deleted) " + person.nationality;
 
@@ -58,8 +59,8 @@
 
 
     //  CREATE TWO OBJECTS:  myFather and myMother   CREATE OBJECTS FROM THE SAME PROTOTYPE (above)
-    var myFather = new PersonX("John", "Doe", 50, "blue");
-    var myMother = new PersonX("Sally", "Rally", 48, "green");
+    var myFather = new PersonX("John", "Doe", 50, "blue");      //  INVOKE !!!  returning an object
+    var myMother = new PersonX("Sally", "Rally", 48, "green");  //  INVOKE !!!  returning an object
 
     document.getElementById("demo4").innerHTML =
             "My father is " + myFather.age + ". My mother is " + myMother.age + ". Nationality is " + myMother.nationality + ". Legs: " + myMother.legs;
@@ -89,6 +90,36 @@
 
     //  The object that invokes the Barn.greet() function is in context.
     //  We invoked the Barn.greet() function with the context of the {Mook} object
+
+    //  ~~~~~~~~~~~~~~~~~~~~~
+
+    //  Create Object with Constructor Function and iterate through it with for/in Loop
+
+
+    (function(){
+
+
+        function Person(first, last, age, eye) {
+            this.firstName = first;
+            this.lastName = last;
+            this.age = age;
+            this.eyeColor = eye;
+            this.name = function() {return this.firstName + " " + this.lastName
+            };
+        }
+
+        var father = new Person("Karl", "Niclas", 83, "brown");
+
+        var txt = "<ul>";
+        for (var x in father){
+            txt += "<li> Key: " + x + " | Value: " + father[x] + "</li>";
+        }
+        txt += "</ul>";
+
+        document.getElementById('demo6').innerHTML = txt;
+
+
+    })();
 
 
 </script>
