Comment to mathRandom & update .gitignore with Viveks guidance

--- a/mathRandom.html
+++ b/mathRandom.html
@@ -18,7 +18,7 @@
     return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 
-    var ranNum = getRandomInt(40,60);       // << Enter min and max
+    var ranNum = getRandomInt(40,60);       // << Enter min and max  --  answer is returned and assigned to var ranNum
     console.log("Random Number: " + ranNum);
     document.getElementById('demo').innerHTML = "<h2> Random Number: " + ranNum + "</h2>"
 
