--- a/JSON_ObjectCreate.html
+++ b/JSON_ObjectCreate.html
@@ -20,14 +20,14 @@
             '{ "firstName":"Anna" , "lastName":"Smith" },' +
             '{ "firstName":"Peter" , "lastName":"Jones" } ]}';
 
-    var obj = JSON.parse(json);                                    //  Object: { employees: [{},{},{}] }
+    var obj = JSON.parse(json);                                    //  JSON.parse() >> Object: { employees: [{},{},{}] }
 
-    var employeeArray = obj.employees;          //  => Array with three objects:  [{},{},{}]
+    var employeeArray = obj.employees;             //  => Array with three objects:  [{},{},{}]
 
     var i;
     var text = "<tr>";
 
-    for (i=0;i<employeeArray.length; i++) {     //  each item in the array is an OBJECT with two key-value pairs
+    for (i=0;i<employeeArray.length; i++) {        //  each item in the array is an OBJECT with two key-value pairs
 
         currentEmployee = employeeArray[i];
         text += "<td>" + currentEmployee.firstName + "</td>";
@@ -37,7 +37,7 @@
 
     document.getElementById('demo').innerHTML = text;
 
-    document.getElementById('demo1').innerHTML = JSON.stringify({ firstName:"John" , lastName:"Doe" });
+    document.getElementById('demo1').innerHTML = JSON.stringify({ firstName:"John" , lastName:"Doe" });  //  JSON.stringify()
 
 </script>
 
