--- a/mathRandom.html
+++ b/mathRandom.html
@@ -17,10 +17,13 @@
     function getRandomInt(min, max) {
     return Math.floor(Math.random() * (max - min + 1)) + min;
     }
-    var ranNum = getRandomInt(40,60);       // << Enter min and max  --  answer is returned and assigned to var ranNum
+
+
+    var ranNum = getRandomInt(40,60);       // INVOKE  << Enter min and max  --  answer is returned and assigned to var ranNum
     //  END Random Number Generator
 
 
+    //  DISPLAY:
     console.log("Random Number: " + ranNum);
     document.getElementById('demo').innerHTML = "<h2> Random Number: " + ranNum + "</h2>"
 
