--- a/JSON_String_Object.html
+++ b/JSON_String_Object.html
@@ -20,7 +20,14 @@
             '{ "firstName":"Anna" , "lastName":"Smith" },' +
             '{ "firstName":"Peter" , "lastName":"Jones" } ]}';
 
-    var obj = JSON.parse(json);                                    //  JSON.parse() >> Object: { employees: [{},{},{}] }
+    var obj = JSON.parse(json);          //  JSON.parse() >> TURN JSON STRING into JavaScript OBJECT -- Object: { employees: [{},{},{}] }
+
+    for (var item in obj) {
+        console.log ("item: "+ item);                   //  item:  employees  (there is one item in the object:  employees)
+        console.log("typeof item: " + typeof item);     //  typof item:  string
+        console.log ("item.employees: "+ obj[item]);    //  to view the value of the object key(property):  obj[item]:  [object Object],[object Object],[object Object]
+        }
+
 
     var employeeArray = obj.employees;             //  => Array with three objects:  [{},{},{}]
 
@@ -37,7 +44,7 @@
 
     document.getElementById('demo').innerHTML = text;
 
-    document.getElementById('demo1').innerHTML = JSON.stringify({ firstName:"John" , lastName:"Doe" });  //  JSON.stringify()
+    document.getElementById('demo1').innerHTML = JSON.stringify({ firstName:"John" , lastName:"Doe" });  //  JSON.stringify() >>  Turn JS Object to JSON STRING
 
 </script>
 
