--- a/Objects.html
+++ b/Objects.html
@@ -17,6 +17,14 @@
 
 <script>
 
+    //    Accessing Object Properties:
+
+    //    objectName.property          // person.age
+    //    objectName["property"]       // person["age"]
+    //    objectName[expression]       // x = "age"; person[x]
+    //    (The expression must evaluate to a property name.)
+
+
     //  Create Object  -- Access object Method  <<  JUST AN OBJECT - Not Constructor
     var person = {
         firstName: "John",
