Algorithms and Data Structures - Arrays Directory organizatoin improvements

--- a/CodeInterview/one.html
+++ b/CodeInterview/one.html
@@ -97,7 +97,7 @@
             }
         }
         var newArray = stringArray.map(replacer);
-        var result = newArray.join("");             //  ARRAY to STRING with no commas
+        var result = newArray.join("");             //  ARRAY to STRING with no commas - Join the elements of an array into a string
         document.getElementById('demo4').innerHTML = "<h2>1.4 Replace spaces in the string: '" + string + "' with '%20' " + " Result:  '" + result + "' </h2>";
 
     }
