Data Structure:  Array chapter complete Data Structure:  Stack chapter initiated

--- a/Array_Fundamentals.html
+++ b/Array_Fundamentals.html
@@ -59,37 +59,33 @@
             document.getElementById("demo3").innerHTML = pups.join(" | ");
 
             //  POP() and PUSH()   (END)
-            document.getElementById("demo4").innerHTML = pups.pop();   //  REMOVE END element from array
-            var x = pups.push("Barn");     //  ADD to END -- Return array length
-            document.getElementById("demo5").innerHTML = pups;   //  Display
+            document.getElementById("demo4").innerHTML = pups.pop();    //  REMOVE from END
+            var x = pups.push("Barn");                                  //  ADD to END -- Return array length
+            document.getElementById("demo5").innerHTML = pups;
 
             //  SHIFT and UNSHIFT  (BEGINNING)
-            document.getElementById("demo6").innerHTML = pups.shift();  //  REMOVE BEGINNING
-            var y = pups.unshift("Sammy");  //  ADD to BEGINNING -- Return array length
-            document.getElementById("demo7").innerHTML = pups;  //  Display
+            document.getElementById("demo6").innerHTML = pups.shift();  //  REMOVE from BEGINNING
+            var y = pups.unshift("Sammy");                              //  ADD to BEGINNING -- Return array length
+            document.getElementById("demo7").innerHTML = pups;
         }
         myFunc2();
 
 
-
+        //  SORTING:
         function myFunc3(){
 
             var points = [40, 100, 1, 5, 25, 10];
 
-            //  Numeric Sort --  lowest to hightest:
-            points.sort(function(a,b){return a-b});
+            points.sort(function(a,b){return a-b});                     //  Numeric Sort --  lowest to hightest:
             document.getElementById('demo8').innerHTML = points.join(" < ");
 
-            //  Numeric Sort --  highest to lowest:
-            points.sort(function(a,b){return b-a});
+            points.sort(function(a,b){return b-a});                     //  Numeric Sort --  highest to lowest:
             document.getElementById('demo9').innerHTML = points.join(" > ");
 
-            //  Find highest value in an array
-            points.sort(function(a,b){return a-b});
+            points.sort(function(a,b){return a-b});                     //  Find highest value in an array
             document.getElementById('demo10').innerHTML = points[0];
 
-            //  Find lowest value in an array
-            points.sort(function(a,b){return b-a});
+            points.sort(function(a,b){return b-a});                     //  Find lowest value in an array
             document.getElementById('demo11').innerHTML = points[0];
 
         }
