--- a/CodeInterview/one.html
+++ b/CodeInterview/one.html
@@ -23,7 +23,7 @@
             console.log('currentChar: ' + currentChar);
             console.log("string.indexOf(currentChar): " + string.indexOf(currentChar));
 
-            if (string.indexOf(currentChar) != i) {
+            if (string.indexOf(currentChar) != i) {         //  if the index of the current character is NOT the same as the iterator index >> there MUST BE at least TWO of the same Characters!!
                 console.log("False");
                 return false
             }
@@ -44,7 +44,7 @@
 
         for (var i = 0; i < length; i++) {
             currentChar = string.charAt(i);
-            array.unshift(currentChar);
+            array.unshift(currentChar);         //  Take first character (from iterator) and unshift() into the beginning or a new array (will end up at END)
         }
 
         var result = array.join('');    //  ARRAY to STRING with no commas
@@ -53,7 +53,7 @@
     }
     reverse("string");
 
-    //  1.3  Given two strings, method to decide if one is a permutation of the other
+    //  1.3  Given two strings, create method to decide if one is a permutation of the other
 
     function permutation(stringOne, stringTwo){
 
