--- a/AlgDataStruc/Stacks.html
+++ b/AlgDataStruc/Stacks.html
@@ -17,7 +17,7 @@
 
         var items = [];                     //  Our DATA STRUCTURE to store the ELEMENTS of the STACK
 
-        //  Implement METHODS for our STACK FUNCTION:
+        //  Implement LIFO METHODS for our STACK FUNCTION:
         this.push = function(element){
             items.push(element);            //  array.push(element)  --  ADD new elements to the END of the STACK
         };
